fetch brewdat since. fix glycol heater reporting
